# IRS-PM-2026-03-29-AIS08-GRP-11-ThePlanner

./: .gitignore  README.md  demo.sh  member-github.txt
ProjectReport/: DataFlowDiagram.md  ExecutionPlan.md  IRS-PM-2026-04-09-AIS08-GRP-11-ThePlanner-Proposal-Presentation.pptx  IRS-PM1-Proposal-Presentation-pandoc.md  IRS-PM1-Proposal-Presentation.md  ReasoningExplained.md  md2pandoc.py
ProjectReport/Proposal/: IRS-PM-2026-03-29-AIS08-GRP-11-ThePlanner.docx  IRS-PM-2026-03-29-AIS08-GRP-11-ThePlanner.md  README.md  convert.sh  format_docx.py  pandoc-plot.yml
SystemCode/llm_agent/src/: knowledge_graph.py  nl_to_pddl.py
SystemCode/llm_agent/tests/: test_knowledge_graph.py  test_nl_to_pddl.py
SystemCode/monitor/: monitor.py
SystemCode/monitor/tests/: test_monitor.py
SystemCode/planner/: CMakeLists.txt
SystemCode/planner/domain/: problem_template.pddl  tabletop.pddl
SystemCode/planner/include/: action.hpp  astar_planner.hpp  ga_ranker.hpp  pddl_parser.hpp  plan.hpp  state.hpp
SystemCode/planner/src/: astar_planner.cpp  ga_ranker.cpp  main.cpp  pddl_parser.cpp
SystemCode/planner/tests/: run_benchmarks.sh  test_astar.cpp  test_benchmarks.cpp  test_ga.cpp  test_parser.cpp
SystemCode/planner/tests/benchmarks/blocksworld/: domain.pddl  p01.pddl  p02.pddl  p03.pddl
SystemCode/planner/tests/benchmarks/gripper/: domain.pddl  p01.pddl  p02.pddl
SystemCode/planner/tests/benchmarks/logistics/: domain.pddl  p01.pddl
SystemCode/ros2_bridge/: README.md
SystemCode/ros2_bridge/src/: agent_hub.py  isaac_executor.py
SystemCode/ros2_bridge/tests/: test_agent_hub.py  test_isaac_executor.py
SystemCode/tests/: test_integration.py  test_isaac_franka.py
SystemCode/web_ui/: README.md  index.html
